--- a/test/JS/B站JS/VueJS/Vuex/vuex共享数据.html
+++ b/test/JS/B站JS/VueJS/Vuex/vuex共享数据.html
@@ -4,13 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 20vh;
+            flex-direction: column;
+        }
+        .son1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 20vh;
+        }
+        .son1 h1{
+            margin-left: 50px;
+            margin-right: 50px;
+        }
+    </style>
 </head>
 <body>
-    
+
+    <div class="app">
+        <div>
+            <father></father>
+        </div>
+    </div>
+
+    <template id="father">
+        <div>
+            <son1 class="son1" @parentchangenum="changenum"></son1>
+            <son2 class="son2" :parentchangenum="num"></son2>
+        </div>
+    </template>
+
+    <template id="son1">
+        <div>
+            <input type="button" value="-" @click="sub">
+            <!-- <h1>son1 : {{ count1 }}</h1> -->
+            <h1>{{ this.$store.state.num }}</h1>
+            <input type="button" value="+" @click="add">
+        </div>
+    </template>
+
+    <template id="son2">
+        <div>
+            <!-- <h1>son2 : {{ parentchangenum }}</h1> -->
+            <h1>{{ this.$store.state.num }}</h1>
+            <input type="button" value="-" @click="sub">
+            <h1>{{ this.$store.state.num }}</h1>
+            <input type="button" value="+" @click="add">
+        </div>
+    </template>
+
     <script src="../../../../lib/vue.js"></script>
     <script src="../../../../lib/vuex.js"></script>
     <script>
-        
+        // 创建 vuex 对象
+        const store = new Vuex.Store({
+            // state 相当于组件中的data，专门用于保存共享的数据
+            state: {
+                num: 0,
+            },
+            // 在 mutations 修改数据
+            mutations: {
+                addFun(state){
+                    state.num++
+                },
+                subFun(state){
+                    state.num--
+                }
+            }
+        });
+        // 创建组件
+        Vue.component("father",{
+            template: "#father",
+            store: store,
+            data: function(){
+                return {
+                    num: 0
+                }
+            },
+            methods: {
+                changenum(data){
+                    // this.num = data
+                }
+            },
+            components: {
+                son1: {
+                    template: "#son1",
+                    data: function(){
+                        return {
+                            count1: 0
+                        }
+                    },
+                    methods: {
+                        add(){
+                            // this.count1++
+                            // this.$emit("parentchangenum",this.count1)
+                            // this.$store.state.num++
+                            this.$store.commit("addFun")
+                        },
+                        sub(){
+                            // this.count1--
+                            // this.$emit("parentchangenum",this.count1)
+                            // this.$store.state.num--
+                            this.$store.commit("subFun")
+                        }
+                    },
+                },
+                son2: {
+                    template: "#son2",
+                    data: function(){
+                        return {
+                            count2: 0
+                        }
+                    },
+                    methods: {
+                        add(){
+                            // this.count1++
+                            // this.$emit("parentchangenum",this.count1)
+                            // this.$store.state.num++
+                            this.$store.commit("addFun")
+                        },
+                        sub(){
+                            // this.count1--
+                            // this.$emit("parentchangenum",this.count1)
+                            // this.$store.state.num--
+                            this.$store.commit("subFun")
+                        }
+                    },
+                    props: ["parentchangenum"]
+                }
+            }
+        })
+        new Vue({
+            el: ".app",
+        })
     </script>
 </body>
 </html>
