--- a/test/JS/B站JS/VueJS/v-slot指令.html
+++ b/test/JS/B站JS/VueJS/v-slot指令.html
@@ -47,9 +47,7 @@
             },
         })
         new Vue({
-            el: ".app",
-
-        })
+        }).$mount(".app")
     </script>
 </body>
 </html>
