--- a/test/JS/B站JS/VueJS/组件通过绑定传值.html
+++ b/test/JS/B站JS/VueJS/组件通过绑定传值.html
@@ -10,6 +10,7 @@
     <div class="app">
         <!-- 在 父对象 中通过 v-bind: 传递 -->
         <o-com :parent-msg="msg"></o-com>
+        <p>{{ ii }}</p>
     </div>
 
     <script src="../../../lib/vue.js"></script>
@@ -18,7 +19,8 @@
         new Vue({
             el: ".app",
             data: {
-                msg: "app实例 的数据"
+                msg: "app实例 的数据",
+                ii: 'iiiiiii'
             },
             components: {
                 // 在注册 组件 的时候使用 “驼峰命名法”
@@ -26,7 +28,7 @@
                 oCom: {
                     data: function(){
                         return {
-                            com1file: {title: "私有组件",content: "com1"}
+                            com1file: {title: "私有组件",content: "com1"},
                         }
                     },
                     // 组件中的 props 中的数据，都是通过父组件传递过来的
