--- a/test/JS/B站JS/DOM常见操作-增删改查/index.html
+++ b/test/JS/B站JS/DOM常见操作-增删改查/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <input type="button" value="按钮" id="btn">
+    <input type="button" value="删除黑色" id="btn">
     <ul id="UL">
         <li id="first">first</li>
         <li></li>
@@ -22,48 +22,43 @@
     <input type="text" id="txt">
     <input type="button" value="添加" id="addBtn">
     <script>
-        window.onload = function(){
-            /* 改 && 查 */
-            // 查找父元素
-            var oBtn = document.getElementById("btn");
-            // alert(oBtn.parentNode.parentNode.parentNode);
+        /* 改 && 查 */
+        // 查找父元素
+        var oBtn = document.getElementById("btn");
+        // alert(oBtn.parentNode.parentNode.parentNode);
 
-            // 查找子元素
-            var oUl = document.getElementById("UL");
-            var oLi = oUl.children;
-            // alert(oLi[2].innerHTML);
-            var oFirst = oUl.firstElementChild || oUl.firstChild;
-            var oLast = oUl.lastElementChild || oUl.lastChild;
-            oFirst.style.background = 'blue';
+        // 查找子元素
+        var oUl = document.getElementById("UL");
+        var oLi = oUl.children;
+        // alert(oLi[2].innerHTML);
+        var oFirst = oUl.firstElementChild || oUl.firstChild;
+        var oLast = oUl.lastElementChild || oUl.lastChild;
+        oFirst.style.background = 'pink';
 
-            // 查找兄弟元素
-            var nextBro = oFirst.nextElementSibling;
-            var prevBro = oLast.previousElementSibling;
-            nextBro['style'].background = 'black';
-            nextBro.innerHTML = "firstChild's nextBro";
-            nextBro['style'].color = 'white';
-            prevBro['style'].background = 'yellow';
+        // 查找兄弟元素
+        var nextBro = oFirst.nextElementSibling;
+        var prevBro = oLast.previousElementSibling;
+        nextBro['style'].background = 'black';
+        nextBro.innerHTML = "firstChild's nextBro";
+        nextBro['style'].color = 'white';
+        prevBro['style'].background = 'hotpink';
 
-            /* 增 && 删 */
-            // 删除节点
-            oBtn.onclick = function(){
-                oUl.removeChild(nextBro);
-            }
-            // 创建元素
-            var oTxt = document.getElementById("txt");
-            var addBtn = document.getElementById("addBtn");
-            addBtn.onclick = function(){
-                var li = document.createElement("li");
-                li.innerHTML = oTxt.value;
-                //oUl.appendChild(li);
-
-                //插入到指定位置
-                oUl.insertBefore(li,oUl.children[0]);
-                oTxt.value = '';
-            }
-
-        };
-
+        /* 增 && 删 */
+        // 创建元素
+        var oTxt = document.getElementById("txt");
+        var addBtn = document.getElementById("addBtn");
+        addBtn.onclick = function(){
+            var li = document.createElement("li");
+            li.innerHTML = oTxt.value;
+            //oUl.appendChild(li);
+            //插入到指定位置
+            oUl.insertBefore(li,oUl.children[0]);
+            oTxt.value = '';
+        }
+        // 删除节点
+        oBtn.onclick = function(){
+            oUl.removeChild(nextBro);
+        }  
     </script>
 </body>
 </html>
