--- a/test/JS/B站JS/VueJS/匿名插槽.html
+++ b/test/JS/B站JS/VueJS/匿名插槽.html
@@ -13,8 +13,11 @@
     
     <template id="father">
         <div>
+            <!-- 在使用子组件的时候 动态 给子组件添加内容 -->
             <son>
-                <div>我是追加数据</div>
+                <div>我是son中的追加数据1</div>
+                <div>我是son中的追加数据2</div>
+                <div>我是son中的追加数据3</div>
             </son>
         </div>
     </template>
