--- a/test/JS/B站JS/VueJS/vue-router基本使用.html
+++ b/test/JS/B站JS/VueJS/vue-router基本使用.html
@@ -14,6 +14,12 @@
         button{
             outline: none;
         }
+        h1{
+            text-align: center;
+            width: 200px;
+            height: 300px;
+            border: 1px solid black;
+        }
         .v-enter,
         .v-leave-to{
             opacity: 0;
@@ -30,7 +36,7 @@
         <!-- 第一种赋值方式 -->
         <router-link to="/login?name=oMing&age=21" tag="button">登录</router-link>
         <!-- 第二种赋值方式 -->
-        <router-link to="/register/vue/5" tag="button">注册</router-link>     
+        <router-link to="/register/vue/5" tag="button">注册</router-link> 
         <transition mode="out-in">
             <router-view></router-view>
         </transition>
@@ -42,9 +48,9 @@
             template: "<h1>登录界面</h1>",
             // 生命周期方法
             created(){
-                // console.log(this.$route)
+                console.log(this.$route)
                 // 第一种获取方式
-                // console.log(this.$route.query.name + " " + this.$route.query.age)
+                console.log(this.$route.query.name + " " + this.$route.query.age)
             }
         }
         const register = {
@@ -57,24 +63,23 @@
             }
         }
         
-        // 3、根据自定义的路由规则创建 路由对象
+        // 2、根据自定义的路由规则创建 路由对象
         const vue_router = new VueRouter({
-            // routes // (缩写) 相当于 routes: routes
-            // 2、定义路由（切换规则）
+            // 3、定义路由（切换规则）
             routes: [
                 // 数组中的每一个对象就是一条规则
                 { path: '/login', component: login },
                 // 第二种赋值方式
                 { path: '/register/:name/:age', component: register },
                 // 路由重定向
-                //{ path: '/', redirect: '/login' }
+                { path: '/', redirect: '/login' }
             ],
             // 修改 router-link 的类名
             linkActiveClass: "lr-active",
         })
 
         new Vue({
-            // 4、将创建好的路由对象 绑定 到app实例
+            // 4、将创建好的 路由对象 绑定 到 app实例
             router: vue_router,
         }).$mount("#app")
     </script>
