--- a/test/JS/B站JS/oMingECharts/index.html
+++ b/test/JS/B站JS/oMingECharts/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数据可视化</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/echarts.min.js"></script>
 </head>
 <body>
     <!-- 头部的盒子 -->
@@ -16,18 +15,19 @@
     </header>
     <!-- 页面主体部分 -->
     <section class="main-box">
+        <!-- 左边部分 -->
         <div class="column left">
-            <div class="panel bar">
+            <div class="panel bar-left">
                 <h2>柱形图-就业行业</h2>
-                <div class="chart1">图表</div>
+                <div class="chart"></div>
             </div>
-            <div class="panel line">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel line-left">
+                <h2>折线图-人员变化<a href="javascript:;">2020</a><a href="javascript:;">2021</a></h2>
+                <div class="chart"></div>
             </div>
-            <div class="panel pie">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel pie-left">
+                <h2>饼状图-年龄分布</h2>
+                <div class="chart"></div>
             </div>
         </div>
         <!-- 中间部分 -->
@@ -52,25 +52,26 @@
                 <div class="cube"></div>
                 <div class="spin-1"></div>
                 <div class="spin-2"></div>
+                <div class="chart"></div>
             </div>
         </div>
+        <!-- 右边部分 -->
         <div class="column right">
-            <div class="panel bar">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel bar-right">
+                <h2>柱形图-技能掌握</h2>
+                <div class="chart"></div>
             </div>
-            <div class="panel line">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel line-right">
+                <h2>折线图-播放量</h2>
+                <div class="chart"></div>
             </div>
-            <div class="panel pie">
-                <h2>柱形图-就业行业</h2>
-                <div class="chart">图表</div>
+            <div class="panel pie-right">
+                <h2>饼状图-地区分布</h2>
+                <div class="chart"></div>
             </div>
         </div>
     </section>
     
-    <script src="./js/flexible.js"></script>
     <script>
         var t = null
         function time(){
@@ -86,33 +87,14 @@
         time()
         clearInterval(t)
         t = setInterval(time,1000)
-        var industry = echarts.init(document.querySelector('.bar'))
-        var option = {
-            title: {
-                text: '就业行业'
-            },
-            tooltip: {},
-            legend: {
-                data:['销量']
-            },
-            grid: {
-                left: '0%',
-                right: '0%',
-                bottom: '0%',
-                top: '15%',
-            },
-            xAxis: {
-                data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
-            },
-            yAxis: {},
-            series: [{
-                name: '销量',
-                type: 'bar',
-                data: [5, 20, 36, 10, 10, 20]
-            }]
-        };
-        // 使用刚指定的配置项和数据显示图表。
-        industry.setOption(option);
+        // 引入柱状图
+        
     </script>
+
+    <script src="./js/jquery-1.11.3.js"></script>
+    <script src="./js/echarts.min.js"></script>
+    <script src="./js/flexible.js"></script>
+    <script src="./js/china.js"></script>
+    <script src="./js/options.js"></script>
 </body>
 </html>
