--- a/importantProject/JS/B站JS/原生JS动画库/05-透明度动画.html
+++ b/importantProject/JS/B站JS/原生JS动画库/05-透明度动画.html
@@ -11,7 +11,7 @@
 		#box {
 			width: 100px;
 			height: 100px;
-			background-color: #333744;
+			background-color: #ddd;
 			position: relative;
 			top: 200px;
 		}
