--- a/importantProject/JS/YouTubeJS/CursorAnimation/index.html
+++ b/importantProject/JS/YouTubeJS/CursorAnimation/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,28 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
-<body>
-    <div class="cursor">
 
+<body>
+    <div class="cursor"></div>
+    <div id="content">
+        <nav>
+            <h1>Dev Ed</h1>
+            <ul class="nav-links">
+                <li>Home</li>
+                <li>Contact</li>
+                <li>Services</li>
+            </ul>
+        </nav>
+        <section>
+            <div class="front-cover">
+                <img src="../../../images/SurvivalShooter.jpg" alt="">
+            </div>
+            <div class="front-desc">
+                <h2>2DRoguelike</h2>
+                <p>Made With Unity</p>
+            </div>
+        </section>
     </div>
-    <nav>
-        <h1>Dev Ed</h1>
-        <ul class="nav-links">
-            <li>Home</li>
-            <li>Contact</li>
-            <li>Services</li>
-        </ul>
-    </nav>
-    <section>
-        <div class="front-cover">
-            <img src="../../../images/aerial-photo-of-mountain-surrounded-by-fog-733174.jpg" alt="">
-        </div>
-        <div class="front-desc">
-            <h2>2DRoguelike</h2>
-            <p>Made With Unity</p>
-        </div>
-    </section>
 </body>
+
 </html>
