--- a/importantProject/CSS/CSS总结.html
+++ b/importantProject/CSS/CSS总结.html
@@ -5,13 +5,19 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="index.css">
 	<style type="text/css">
-		.div1{
+	body {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-height: 90vh;
+		background-color: #333744;
+	}
+		/* .div1{
 			width: 300px;
 			height: 300px;
 			border: 3px dashed #EE6363;
 			padding: 10px;
 			background-color: #E6E6FA;
-			/* 上左50px */
 			margin: 50px 50px;
 			text-align: center;
 		}
@@ -47,11 +53,39 @@
         	background: #fff url(../images/SpaceShooter.jpg) 0 0 no-repeat;
         	background-size: 500px 300px;
         	background-position: 30px 50px;
-        }
+		} */
+		h1{
+			color: transparent;
+			content: 'SPOTLIGHT';
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%,-50%);
+			background-color: brown;
+			background-clip: text;
+			-webkit-background-clip: text;  /*兼容*/
+			clip-path: circle(20px at 0% 50%);
+			-webkit-clip-path: circle(20px at 0% 50%); /*兼容*/
+			animation: light 4s ease-in-out infinite;
+		}
+		@keyframes light {
+			0% {
+				clip-path: circle(20px at 0% 50%);
+				-webkit-clip-path: circle(20px at 0% 50%); /*兼容*/
+			}
+			50% {
+				clip-path: circle(20px at 100% 50%);
+				-webkit-clip-path: circle(20px at 100% 50%); /*兼容*/
+			}
+			100% {
+				clip-path: circle(20px at 0% 50%);
+				-webkit-clip-path: circle(20px at 0% 50%); /*兼容*/
+			}
+		}
 	</style>
 </head>
 <body>
-	<div class="div1">
+	<!-- <div class="div1">
 		<span class="div1-txt">2DRoguelike Box...</span></br>
 		<span class="div1-txt">Name</span>
 		<input type="text" name="Name" class="name">
@@ -72,12 +106,11 @@
 		<h3>01</h3>
 		<h3>02</h3>
 	</div>
-	<!-- 侧边栏 -->
 	<aside></aside>
 	
 	<div class="father">
 		<div class="son"></div>
-	</div>
-	
+	</div> -->
+	<h1>SPOTLIGHT</h1>
 </body>
 </html>
