--- a/importantProject/JS/index.html
+++ b/importantProject/JS/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- <script src="app.js"></script> -->
+	<!-- <script src="app.js"></script> -->
+	<script src="../lib/jquery-1.11.3.js"></script>
   </head>
   <body>
     <!-- <input type="button" value="隐藏" id="showHidebtn" onclick="showHide()">
@@ -47,8 +48,9 @@
 		var p = new Person();
 	</script> -->
     <!-- <script src="test.js"></script> -->
+	<script src="./jsNOTE.js"></script>
 
-    <svg viewBox="0 0 100 100">
+    <!-- <svg viewBox="0 0 100 100">
       <circle
         fill="none"
         stroke="#333744"
@@ -59,7 +61,8 @@
         stroke-linecap="round"
         class="ball"
         transform="rotate(-90 50 50)"
-      ></circle>
+	  ></circle> -->
+	  
     </svg>
   </body>
 </html>
