--- a/importantProject/JS/index.html
+++ b/importantProject/JS/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-	<!-- <script src="app.js"></script> -->
+	<script src="app.js"></script>
 	<script src="../lib/jquery-1.11.3.js"></script>
   </head>
   <body>
-    <!-- <input type="button" value="隐藏" id="showHidebtn" onclick="showHide()">
+    <input type="button" value="隐藏" id="showHidebtn" onclick="showHide()">
 	<input type="button" value="夜晚" id="dayNightBtn" onclick="ShowDayNight()">
 
 	<input type="button" value="变粉" id="yellowBtn"   onclick="ChangeColor('#EE82EE')">
@@ -32,7 +32,7 @@
 
 	<button>click</button>
 
-	<input type="text" id="txt"> -->
+	<input type="text" id="txt">
 
     <!-- <script>
 		var oTxt = document.getElementById("txt");
@@ -47,22 +47,5 @@
 
 		var p = new Person();
 	</script> -->
-    <!-- <script src="test.js"></script> -->
-	<script src="./jsNOTE.js"></script>
-
-    <!-- <svg viewBox="0 0 100 100">
-      <circle
-        fill="none"
-        stroke="#333744"
-        stroke-width="5"
-        cx="50"
-        cy="50"
-        r="15"
-        stroke-linecap="round"
-        class="ball"
-        transform="rotate(-90 50 50)"
-	  ></circle> -->
-	  
-    </svg>
   </body>
 </html>
