--- a/JS/B站JS/VueJS/watch属性.html
+++ b/JS/B站JS/VueJS/watch属性.html
@@ -59,6 +59,7 @@
                     this.sum = parseInt(this.num1) + parseInt(this.num2)
                 },
                 num2: function(){
+                    // console.log(newValue,oldValue)
                     this.sum = parseInt(this.num1) + parseInt(this.num2)
                 },
                 // 监听路由地址的变化
@@ -76,6 +77,7 @@
                 register: register,
             }
         })
+        // 通过 $route 拿到路由对象
         // console.log(vm.$route)
     </script>
 
