--- a/JS/B站JS/React/04.类式组件.html
+++ b/JS/B站JS/React/04.类式组件.html
@@ -11,19 +11,19 @@
     <div id="test"></div>
 
     <!-- 引入【react核心库】 -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <!-- 引入【react-dom】，用于支持react操作dom -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <!-- 引入【babel】，用于将【jsx】转为【js】 -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
-      const VDOM = (
-        <div id="container">
-          <h2>Hello React</h2>
-        </div>
-      );
-      ReactDOM.render(VDOM, document.getElementById("test"));
+      class MyComponent extends React.Component {
+        render() {
+          return <h2>Hello React</h2>;
+        }
+      }
+      ReactDOM.render(<MyComponent />, document.getElementById("test"));
     </script>
   </body>
 </html>
